# caliban

./: .clang-format  CMakeLists.txt  LICENSE  README.md  README.rst
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  app_utils.h  main.cpp
code/: CMakeLists.txt
code/src/: CMakeLists.txt
datasets/1/: ExperimentDetails.txt  README.md  calibration_object.txt
datasets/curv/: K.txt  curvature.txt
datasets/curv/data/: cam_pose_1.txt  cam_pose_16.txt  cam_pose_17.txt  cam_pose_18.txt  cam_pose_20.txt  cam_pose_21.txt  cam_pose_22.txt  cam_pose_24.txt  cam_pose_26.txt  cam_pose_27.txt  cam_pose_28.txt  cam_pose_32.txt  cam_pose_34.txt  cam_pose_35.txt  cam_pose_36.txt  cam_pose_40.txt  cam_pose_41.txt  cam_pose_42.txt  cam_pose_43.txt  cam_pose_44.txt  cam_pose_45.txt  cam_pose_47.txt  cam_pose_48.txt  cam_pose_51.txt  cam_pose_55.txt  cam_pose_56.txt  cam_pose_58.txt  cam_pose_59.txt  cam_pose_6.txt  cam_pose_60.txt  cam_pose_62.txt  cam_pose_65.txt  cam_pose_66.txt  cam_pose_67.txt  cam_pose_68.txt  cam_pose_69.txt  cam_pose_74.txt  cam_pose_77.txt  cam_pose_81.txt  cam_pose_83.txt  (+5 more)
datasets/no_curv/: dist_coeff.txt  flange2cam.txt  robot_cali.txt
datasets/no_curv/data/: cam_pose_0.txt  cam_pose_10.txt  cam_pose_11.txt  cam_pose_12.txt  cam_pose_13.txt  cam_pose_14.txt  cam_pose_15.txt  cam_pose_19.txt  cam_pose_2.txt  cam_pose_23.txt  cam_pose_25.txt  cam_pose_29.txt  cam_pose_3.txt  cam_pose_30.txt  cam_pose_31.txt  cam_pose_33.txt  cam_pose_37.txt  cam_pose_38.txt  cam_pose_39.txt  cam_pose_4.txt  cam_pose_46.txt  cam_pose_49.txt  cam_pose_5.txt  cam_pose_50.txt  cam_pose_52.txt  cam_pose_53.txt  cam_pose_54.txt  cam_pose_57.txt  cam_pose_61.txt  cam_pose_63.txt  cam_pose_64.txt  cam_pose_7.txt  cam_pose_70.txt  cam_pose_71.txt  cam_pose_72.txt  cam_pose_73.txt  cam_pose_75.txt  cam_pose_76.txt  cam_pose_78.txt  cam_pose_79.txt  (+15 more)
include/caliban/: constants.h  extrinsic.h  intrinsic.h  types.h
patterns/: gen_poses.py
src/: CMakeLists.txt  constants.h  extrinsic.cpp  intrinsic.cpp  jaco.cpp  jaco.h  types.h  utils.h
tests/: CMakeLists.txt  extrinsic_tests.cpp  intrinsic_tests.cpp  test_utils.h
